# HeadHunt-VAD

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
configs/: default.yaml  ucf_crime.yaml  xd_violence.yaml
configs/models/: internvl3_8b.yaml  llavaov.yaml  qwenvl.yaml
configs/pretrained/: xd_violence_internvl3_8b.json
examples/: demo_video.py  full_pipeline.py
headhunt_vad/: __init__.py  version.py
headhunt_vad/core/: __init__.py  metrics.py  rhi.py  temporal_locator.py
headhunt_vad/data/: __init__.py  dataset.py  transforms.py  video_loader.py
headhunt_vad/evaluation/: __init__.py  frame_level.py  video_level.py
headhunt_vad/models/: __init__.py  anomaly_scorer.py  base_extractor.py  factory.py  internvl3_extractor.py  llavaov_extractor.py  qwenvl_extractor.py
headhunt_vad/utils/: __init__.py  config.py  io.py  logging.py
headhunt_vad/visualization/: __init__.py  heatmaps.py  temporal_plots.py  tsne.py
scripts/: __init__.py  evaluate.py  extract_features.py  inference.py  run_rhi.py  train_scorer.py
tests/: __init__.py  test_feature_extractor.py  test_metrics.py  test_rhi.py  test_temporal_locator.py
